@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           - now respecting the deprecated_ok config
+          - also check that the specific version of the prereq is available in
+            the indicated perl version
 
 0.001     2013-08-17 05:22:00Z (Karen Etheridge)
           - Initial release.
